# burnout-sentry

./: CONTEXTE.md  README.md  setup.cfg
.github/workflows/: tests.yml
burnout_sentry/: __init__.py
tests/: test_burnout_sentry.py
