[metadata]
name = burnout-sentry
version = 0.1
author = Agate Berriot
author_email = me@agate.blue
long_description = file: README.md

[options]
zip_safe = True
packages = find:

[options.extras_require]

[options.entry_points]

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal = 1
