[metadata]
name = burnout-sentry
version = 0.1
author = Agate Berriot
author_email = me@agate.blue
long_description = file: README.md

[options]
zip_safe = True
packages = find:
install_requires = 
    pydriller~=2.1.0
    click~=8.1.0

[options.extras_require]

[options.entry_points]
console_scripts =
	burnout-sentry = burnout_sentry:cli

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal = 1
